--- a/index.html
+++ b/index.html
@@ -1,123 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mon portfolio</title>
-    <link
-      rel="stylesheet"
-      href="style/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
-  </head>
-  <body>
-    <!-- external link  -->
-    <h3>welcome to gomycode SENEGAL</h3>
-    <h5>
-      gommycode est une école de formation , qui propose des cours dans le
-      domaine de l'informatique, accessible à tous.
-    </h5>
-    <header>
-      <h1>nous rejoindre</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="test.html">infmation</a>
-          </li>
-          <li>
-            <a href="#test">acceuil</a>
-          </li>
-        </ul>
-      </nav>
-      <p class="ma-classe"> je suis un titre</p>
-    </header>
-    <h1 style="color: blueviolet; background-color: beige">Mon portfolio</h1>
-    <!-- internal link  -->
-    <h2>bienvenue</h2>
-    <style>
-      h2 {
-        color: blueviolet;
-        text-align: center;
-      }
-    </style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
-    <img
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-Z23qV81adrRuIom9X7zapbf1EKHaWR7hRA&s"
-    a lt="height 100px" style="text-align: center;">
-    <h1>nos formations</h1>
-    <h3>liste ordonnée</h3>
-    <ol>
-      <li>
-        <p>developpeur web</p>
-      </li>
 
-      <li>
-        <p>cybersécurité</p>
-      </li>
-
-      <li>
-        <p>expert en IA</p>
-      </li>
-    </ol>
-    <h3>liste non ordonnée</h3>
-    <ul>
-      <li>
-        <p>developpeur web</p>
-      </li>
-
-      <li>
-        <p>cybersécurité</p>
-      </li>
-
-      <li>
-        <p>expert en IA</p>
-      </li>
-      <h2>tableau</h2>
-    </ul>
-    <table style="border-spacing: 10px">
-      <tr>
-        <th>pays</th>
-        <th>contacts</th>
-        <th>noms</th>
-      </tr>
-      <tr>
-        <td>SENEgal</td>
-        <td>764749922</td>
-        <td>gomycode</td>
-      </tr>
-      <tr>
-        <td>tunisie</td>
-        <td>224570875</td>
-        <td>gomycode</td>
-      </tr>
-    </table>
-    <h1 id="test">formulaire</h1>
-    <form>
-      <label for="noms">prénom</label>
-      <input type="text" name="" id="" />
-      <br /><br />
-      <label for="email">email</label>
-      <input type="email" name="email" id="" />
-      <br /><br />
-      <label for="mot de passe">mot de passe</label>
-      <input type="mot" de passe id="mot de passe " />
-      <br /><br />
-      <button type="submit">soumettre</button>
-    </form>
-    <div class="parent">
-        <div>
-            <h1>hello</h1>
-        </div>
-        <div class="enfant2">
-            <h1>hello</h1>
-        </div>
-    </div>
-    <h1>photo en html</h1>
-    <img src="image de gomycode.jpg" height="200px" alt="" />
-    <blockquote>
-      <p>nous serons ravi de vous voir</p>
-      <cite>assistant </cite>
-    </blockquote>
-    <footer>copyright by gomycode senegal 2024 powred by gmc</footer>
-  </body>
+    
+</body>
 </html>
-
